--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,5 @@ description: "Enter your address to find and contact your federal, state, county
 gems:
   - jekyll-redirect-from
 google_api_key: AIzaSyDUgcvXlPhFa6auGZHMbIb9jWh7O882Jjw
+
+theme: jekyll-theme-cayman
