--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 port:  5000
 markdown: kramdown
-name: "My Reps"
-url: http://findmyreps.datamade.us
+name: "Find My Reps"
+url: http://vote.reclaimeritrea.com
 encoding: utf-8
 timezone: America/Chicago
 description: "Enter your address to find and contact your federal, state, county and local elected representatives"
